--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,9 @@
 .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
     display: flex;
     flex-direction: row;
     /* align-items: center; */
@@ -6,6 +11,10 @@
     border-width: 1px;
     border-style: solid;
     height: 55px;
+    background-color: white;
+    /* border-bottom-width: 1px;
+    border-bottom-style: solid; */
+    border-bottom-color: rgb(228, 228, 228);
     }
 
     .left-side{
