--- a/styles/header.css
+++ b/styles/header.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-
+    z-index: 100;
     display: flex;
     flex-direction: row;
     /* align-items: center; */
@@ -40,12 +40,13 @@
         flex: 1;
         margin-right:70px ;
         margin-right: 30px;
-        max-width: 350px;
+        max-width: 450px;
         }
 
         .search-icon{
             margin-top: 4px;
             height: 25px;
+            
         }
 
         .voice-search-icon{
