--- a/styles/header.css
+++ b/styles/header.css
@@ -112,6 +112,26 @@
     .notification-icon{
         height: 24px;
     }
+
+
+    .noti-container{
+        position: relative;
+    }
+
+    .noti-numb{
+        position: absolute;
+        background-color: rgb(177, 13, 13);
+        color: white;
+        height: 14px;
+        width: 7px;
+        border-radius: 10px;
+        padding-left: 5px;
+        padding-right: 4px;
+        font-family: roboto,arial;
+        font-size: 11px;
+        top: -1px;
+        right: -4px;
+    }
     .current-user-icon{
         height: 32px;
         border-radius: 16px;
